Added missing request parameters & roll back httpError implementation
